added demo folder
added demo folder

--- a/header.html
+++ b/header.html
@@ -27,7 +27,7 @@
 
 <div data-enhance="false" id="top_menu" style="position:relative;width:100%;min-width:300px;height:65px;color:#FFFFFF;background: #092756;z-index:10">
   <table border="0" style="width:100%;padding-left:15px;padding-right:45px;padding-top:10px">
-    <tr><td align="left"><h2>LOGO</h2></td>
+    <tr><td align="left"><h2>ORA</h2></td>
     <td align="right" >
       <select onchange="setUserAdmin(this)" class="btn" type="text" id="employee" name="employee" style="width:125px;padding-left:20px;margin-right:10px;margin-left:73px">
         <option value="Employee">Employee</option>
