--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html >
   <head>
     <meta charset="UTF-8">
-    <title>Record Keeping</title>
+    <title>ORA</title>
     
     
     <!--<link rel="stylesheet" href="css/normalize.css">-->
@@ -128,7 +128,7 @@ function showMain(){
 <body onload="checkCookies();">
 
 	<div id="login" class="login" style="display:block">
-		<h1>Login</h1>
+		<h1>ORA Login</h1>
 		<form method="post" name="login_form" action="php/auth.php">
 			<input class="input_login" type="text" name="u" id="u" placeholder="Username" required="required" />
 			<input class="input_login" type="password" name="p" id="p" placeholder="Password" required="required" />
