--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>ORA</title>
+	<title>DEMO</title>
 	  
 	<!--<link rel="stylesheet" href="css/normalize.css">-->
 	<!--jQuery References--> 
